see doctor module

--- a/WebApp/Views/Shared/_PatientLayout.cshtml
+++ b/WebApp/Views/Shared/_PatientLayout.cshtml
@@ -54,7 +54,7 @@
                         <div class="menu_section">
                             <ul class="nav side-menu" style="margin-top: 10px;">
                                 <li class="scheduler">
-                                    <a href="#"><img src="~/Content/images/icon_scheduler.png" alt=""> &nbsp <span class="menu-txt"> Appointment</span></a>
+                                    <a href="#"><img src="~/Content/images/appointments.png" alt=""> &nbsp <span class="menu-txt"> Appointment</span></a>
                                     <ul class="nav child_menu">
                                         <li><a href="appointments.html">Rescheduled Appointments</a></li>
                                         <li><a href="appointments.html">Pending Appointments</a></li>
@@ -66,28 +66,28 @@
                                     <a href="@Url.Action("SeeDoctor", "SeeDoctor")"><img src="~/Content/images/icon_doc_search.png" alt="">  &nbsp <span class="menu-txt">See a doctor</span> </a>
                                 </li>
                                 <li class="appointment">
-                                    <a href="#"><img src="~/Content/images/icon_appointment.png" alt="">  &nbsp <span class="menu-txt">Consult History</span></a>
+                                    <a href="#"><img src="~/Content/images/history.png" alt="">  &nbsp <span class="menu-txt">Consult History</span></a>
                                     <ul class="nav child_menu">
                                         <li><a href="p_call_history.html"> Patient Call History</a></li>
                                     </ul>
                                 </li>
                                 <li class="patient">
-                                    <a href="my_health.html"><img src="~/Content/images/icon_patient_search.png" alt=""> &nbsp <span class="menu-txt">My Health</span> </a>
+                                    <a href="my_health.html"><img src="~/Content/images/my-health.png" alt=""> &nbsp <span class="menu-txt">My Health</span> </a>
                                 </li>
                                 <li class="message">
-                                    <a href="#"><img src="~/Content/images/icon_messages.png" alt=""> &nbsp <span class="menu-txt">My Files</span> </a>
+                                    <a href="#"><img src="~/Content/images/my-files.png" alt=""> &nbsp <span class="menu-txt">My Files</span> </a>
                                     <ul class="nav child_menu">
                                         <li><a href="file.html">My Files</a></li>
                                     </ul>
                                 </li>
                                 <li class="call_history">
-                                    <a href="#"><img src="~/Content/images/icon_call-history.png" alt="">  &nbsp <span class="menu-txt">My Doctors</span> </a>
+                                    <a href="#"><img src="~/Content/images/my-doctors1.png" alt="">  &nbsp <span class="menu-txt">My Doctors</span> </a>
                                     <ul class="nav child_menu">
                                         <li><a href="#">Dashboard</a></li>
                                     </ul>
                                 </li>
                                 <li class="call_history">
-                                    <a href="#"><img src="~/Content/images/icon_call-history.png" alt="">  &nbsp <span class="menu-txt">Whats New</span> </a>
+                                    <a href="#"><img src="~/Content/images/whats-new.png" alt="">  &nbsp <span class="menu-txt">Whats New</span> </a>
                                     <ul class="nav child_menu">
                                         <li><a href="whats_news.html">what's News</a></li>
                                     </ul>
