--- a/WebApp/Content/css/style.css
+++ b/WebApp/Content/css/style.css
@@ -715,138 +715,163 @@ a:focus .fa.fa-heart {
 
 .video_head {
 	background: #3598db;
-	padding: 10px; 
+	padding: 20px; 
 	color: #fff;
-}
-.video_head h1 {
-	font-size: 20px;
-	margin: 0; 
-}
-.video_head h1 small {
-	float: right;
-	color: #fff;
-	margin-top: 5px;
 }
 .video_sec {
 	position: relative;
 	width: 60%;
 	float: left;
-}
-.video_sec img {
-	border: 1px solid #cecece;
+	border-right: 1px solid #dad5d5;
 }
 .video_sec > img {
 	height: auto;
 }
-.small_img {
+.video_title {
+	position: absolute;
+	top: 4%;
+	left: 5%;
+	font-size: 18px;
+	color: #fff; 
+	text-shadow: 1px 1px 1px #000;
+}
+.small_img img {
 	position: absolute;
 	top: 5%;
 	right: 5%;
-	max-width: 100px;
-	width: 100%;
+}
+.xs-video-img {
+	max-width: 200px;
+	height: 160px;
+}
+.video_small_icons {
+	width: 30px;
+	margin: 5px;
+}
+.small_video_icon {
+	position: absolute;
+	top: 5%;
+	right: 5%;
+	color: #3598db;
+	font-size: 25px;
 }
 .video_his {
 	width: 40%;
 	float: left;
+	background: #F5F6F8;
+	/*min-height: 890px;*/
+}
+.video_icon_bg {
+position: fixed;
+bottom: 0;
+right: 0;
+background: rgba(255,255,255,0.5);
+width: 100%;
+left: 0;
+height: 100px;
+max-width: 60%;
 }
 .video_icon {
 	padding-left: 0;
 	text-align: center;
-	position: absolute;
-	bottom: 20%;
-	right: 33%;
+	/*position: absolute;*/
+	right: 0 !important;
+	left: 0;
+	bottom: 80px;
+	margin-top: 25px;
 }
 .video_icon li {
 	display: inline-block;
-	margin-right: 20px;
+	position: relative;
+	width: 26px;
+	height: 26px;
 }
-.video_icon li:last-child{
-	margin-right: 0;
+.video_pos {
+	position: absolute;
+	top: 0px;
+	right: 0px;
 }
-.video_icon li a i {	
-	border-radius: 100%;
-	border: 3px solid #0061b2;  
-	font-size: 24px;
-	color: #0061b2;
-	transition: 0.3s;
+.video_pos_h {
+	position: absolute;
+	top: 0px;
+    right: 30px;
+    display: none;
 }
-.video_icon li a i:hover {
-	background: #0061b2;
-	/*border-color: #fff;*/
+.list-alt {
+	padding: 16px 4px 5px 4px;
+	border: 3px solid #1266B1;
 	color: #fff;
+	border-radius: 50%;
+	width: 51px;
+	height: 51px;
+	font-size: 13px;
+	font-weight: 700;
+	background: #1266B1;
+	font-family: "Helvetica Neue",Roboto,Arial,"Droid Sans",sans-serif;
 }
-.video_icon li a i.fa-phone {
-	padding: 10px 12px; 
-	color: #fff;
-	background: #fe0000;
-	border-color: #fe0000;
-}
-.video_icon li a i.fa-microphone {
-	padding: 10px 14px; 
-}
-.video_icon li a i.fa-video-camera {
-	padding: 10px; 
-}
-.video_icon li a i.fa-volume-down {
-	padding: 10px 15px; 
-}
-.video_icon li a i.fa-expand {
-	padding: 10px 12px;  
-}
-.video-icon {
-	margin-right: 15px;
-}
-.video-icon i {
-	color: #fff;
-	font-size: 18px;
-}
-.messages-sec {
+.fa-list-alt:before {
 	display: none;
 }
-.messages-sec {background: #f5f6f8;}
+.list-alt-m {
+	background: none;
+	border-color: #1266B1;
+	color: #1266B1;
+}
+.comments1-m {
+	background: #1266B1;
+	border-color: #1266B1;
+	color: #fff;
+}
+.comments {
+	padding: 8px 5px 5px 4px;
+	border: 3px solid #1266B1;
+	color: #1266B1;
+	border-radius: 50%;
+	width: 51px;
+	height: 51px;
+	font-size: 26px;
+}
+.comments-m {
+	background: #1266B1;
+	border-color: #1266B1;
+	color: #fff;
+}
+.time_salat {
+	float: right;
+	margin: -25px 25px 0px 0;
+	color: #fff; 
+	text-shadow: 1px 1px 1px #000;
+}
+#messages-sec {
+	display: none;
+}
+#messages-sec {background: #f5f6f8;}
 .inbox-item img {
 	float: left;
 	margin-right: 10px;
 	max-width: 30px;
 	border-radius: 50%;
 }
-/*.inbox-item p {
-	border-radius: 20px;
-	max-width: 100%;
-	padding: 5px 10px;
-	background: #fff;
-	display: inline;
-}
-*/
+
 .sent-item img {
 	max-width: 30px;
 	border-radius: 50%;
 	float: right;
 }
-/*.sent-item p {
-	border-radius: 20px;
-	border: none;
-	max-width: 100%;
-	display: inline;
-	padding: 5px 10px;
-	background: #3598db;
-	color: #fff;
-	float: right;
-	margin-right: 15px;
-}*/
 
 /* CSS talk bubble */
 .talk-bubble {
-display: inline-block;
-position: relative;
-max-width: 300px;
-height: auto;
-background-color: #fff;
-border-radius: 10px;
+	display: inline-block;
+	position: relative;
+	width: 80%;
+	height: auto;
+	background-color: #fff;
+	border-radius: 10px;
 }
 .talktext p {
 	margin-bottom: 0;
 }
+
 .border{
   border: 8px solid #666;
 }
@@ -1048,9 +1073,10 @@ border-radius: 10px;
 	border-color: lightyellow transparent transparent lightyellow;
 }*/
 .margin-r {
-	margin-right: 5px;
+	margin-right: 10px;
+	background: #3598DB;
+	color: #fff;
 }
-
 /* Right triangle placed top right flush. */
 .tri-right.border.right-top:before {
 	content: ' ';
@@ -1088,37 +1114,45 @@ border-radius: 10px;
   -webkit-margin-before: 0em;
   -webkit-margin-after: 0em;
 }
+.talktext p span {
+	display: block;
+	text-align: right;
+}
 
 
 #messages-sec {
 	position: relative;
+	margin-top: 15px;
 }
 .message-textarea {
-	position: absolute;
-	bottom: 10px;
+	position: fixed;
+	bottom: 0;
 	right: 0;
-	left: 0;
+	border: 1px solid #cecece;
+	width: 100%;
+	max-width: 40%;
 }
 .message-textarea textarea {
 	resize: none;
 	border: none;
 	width: 100%;
 	padding-right: 65px;
+	height: 99px;
 }
 .message-textarea textarea:focus {
 	border: none;
 	outline: none;
 }
 .messages-send {
-position: absolute;
-bottom: 7px;
-right: 10px;
-font-size: 24px;
-color: #fff;
-background: #3598db;
-border-radius: 5px;
-padding: 10px;
-cursor: pointer;
+	position: absolute;
+	bottom: 28%;
+	right: 25px;
+	color: #fff;
+	background: #3598db;
+	border-radius: 5px;
+	padding: 15px 8px;
+	cursor: pointer;
+	font-size: 18px;
 }
 
 
@@ -1277,16 +1311,34 @@ cursor: pointer;
 	width: 128px !important;
 	height: 128px !important;
 }
+.edit-sec {
+	overflow-y: auto; 
+	overflow-x: scroll;
+	height: 829px;
+}
+.msg-sec {
+	overflow-y: auto;
+	overflow-x: scroll;
+	height: 692px;
+	padding: 10px;
+}
+
 body#video {
 	overflow: hidden;
 }
 
-
-
-
 /*responsive*/
 
 
+@media (max-width: 1920px) {
+	.edit-sec {
+		height: 989px;
+	}
+
+	.msg-sec {
+	    height: 872px;
+	}
+}
 
 @media (max-width: 1600px) {
 	.cl1 {
@@ -1296,12 +1348,57 @@ body#video {
 	.ph1 {
 		right: 30px;
 	}
-	
+
+	.edit-sec {
+		height: 809px;
+	}
+	.msg-sec {
+	    height: 694px;
+	}
 }
+
+
+@media ( max-height: 770px ){
+    .video_icon {
+    	bottom: 90px;
+    }
+    .msg-sec {
+	    height: 672px;
+	}
+}
+
+
+
+@media (max-width: 1480px) {
+	.doctor_details li {
+		margin: 0 5px;
+	}
+	.edit-sec {
+		height: 704px;
+	}
+
+	.msg-sec {
+	    height: 557px;
+	}
+
+	/*.message-textarea {
+		bottom: -70px;
+	}*/
+}
+
 @media (max-width: 1300px) {
 	.video_sec > img {
 	    height: auto;
 	}
+
+    .doctor_details li {
+		width: 23%;
+	}
+	
+	.edit-sec {
+	    height: 654px;
+	}
+
 	.nano {
 	    height: 630px;
 	}
@@ -1320,6 +1417,20 @@ body#video {
 		top: 242px;
 		right: 17px;
 	}
+
+    .msg-sec {
+	    height: 517px;
+	}
+	/*.message-textarea {
+		bottom: -50px;
+	}*/
+
+}
+
+@media (max-width: 1280px){
+ 	.edit-sec {
+	    height: 639px;
+	}
 }
 
 @media (max-width: 1199px) {
@@ -1334,6 +1445,10 @@ body#video {
 	.ph1 {
 		top: 202px;
 		right: 50px;
+	}
+
+    .video_icon {
+		right: 20%;
 	}
 
 }
@@ -1356,7 +1471,7 @@ body#video {
 		text-align: left;
 	}
 	.video_icon {
-		right: 20%;
+		right: 10%;
 	}
 }
 
@@ -1375,6 +1490,9 @@ body#video {
 	}
 	.video_icon {
 	    right: 21%;
+	}
+    .edit-sec {
+	   height: 1300px;
 	}
 	
 	.nano {
@@ -1447,3 +1565,150 @@ body#video {
 
 
 
+
+/*message-style*/
+.conversation-wrap
+    {
+        box-shadow: -2px 0 3px #ddd;
+        padding:0;
+        max-height: 400px;
+        overflow: auto;
+    }
+    .conversation
+    {
+        padding:5px;
+        border-bottom:1px solid #ddd;
+        margin:0;
+
+    }
+
+    .message-wrap
+    {
+        box-shadow: 0 0 3px #ddd;
+        padding:0;
+
+    }
+    .msg
+    {
+        padding:5px;
+        /*border-bottom:1px solid #ddd;*/
+        margin:0;
+    }
+    .msg-wrap
+    {
+        padding:10px;
+        max-height: 400px;
+        overflow: auto;
+
+    }
+
+    .time
+    {
+        color:#bfbfbf;
+    }
+
+    .send-wrap
+    {
+        border-top: 1px solid #eee;
+        border-bottom: 1px solid #eee;
+        padding:10px;
+        /*background: #f8f8f8;*/
+    }
+
+    .send-message
+    {
+        resize: none;
+    }
+
+    .highlight
+    {
+        background-color: #f7f7f9;
+        border: 1px solid #e1e1e8;
+    }
+
+    .send-message-btn
+    {
+        border-top-left-radius: 0;
+        border-top-right-radius: 0;
+        border-bottom-left-radius: 0;
+
+        border-bottom-right-radius: 0;
+    }
+    .btn-panel
+    {
+        background: #f7f7f9;
+    }
+
+    .btn-panel .btn
+    {
+        color:#b8b8b8;
+
+        transition: 0.2s all ease-in-out;
+    }
+
+    .btn-panel .btn:hover
+    {
+        color:#666;
+        background: #f8f8f8;
+    }
+    .btn-panel .btn:active
+    {
+        background: #f8f8f8;
+        box-shadow: 0 0 1px #ddd;
+    }
+
+    .btn-panel-conversation .btn,.btn-panel-msg .btn
+    {
+
+        background: #f8f8f8;
+    }
+    .btn-panel-conversation .btn:first-child
+    {
+        border-right: 1px solid #ddd;
+    }
+
+    .msg-wrap .media-heading
+    {
+        color:#003bb3;
+        font-weight: 700;
+    }
+
+
+    .msg-date
+    {
+        background: none;
+        text-align: center;
+        color:#aaa;
+        border:none;
+        box-shadow: none;
+        border-bottom: 1px solid #ddd;
+    }
+
+
+    body::-webkit-scrollbar {
+        width: 12px;
+    }
+ 
+    
+    /* Let's get this party started */
+    ::-webkit-scrollbar {
+        width: 6px;
+    }
+
+    /* Track */
+    ::-webkit-scrollbar-track {
+        -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+/*        -webkit-border-radius: 10px;
+        border-radius: 10px;*/
+    }
+
+    /* Handle */
+    ::-webkit-scrollbar-thumb {
+/*        -webkit-border-radius: 10px;
+        border-radius: 10px;*/
+        background:#ddd; 
+        -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+    }
+    ::-webkit-scrollbar-thumb:window-inactive {
+        background: #ddd; 
+    }
