patient login and db model update

--- a/WebApp/Views/SeeDoctor/SeeDoctor.cshtml
+++ b/WebApp/Views/SeeDoctor/SeeDoctor.cshtml
@@ -19,7 +19,7 @@
 <script src="~/Scripts/PatientAllergies/PateintAllergies.js"></script>
 <script src="~/Scripts/Surgeries/Surgeries.js"></script>
 <script src="~/Scripts/SeeDoctor/SearchDoctor.js"></script>
-
+<script src="~/Scripts/jquery.blockUI.js"></script>
 
 
 <div class="right_col">
